apps/monitoring/grafana/overlays/monitoring/resources/external-dns.sops.yaml
apiVersion: v1
kind: Service
metadata:
    name: grafana-extname
    annotations:
        external-dns.alpha.kubernetes.io/hostname: ENC[AES256_GCM,data:ncv/EIj3j8h69OqxLW1fuTbj+dAy9mGORrdg5a/jH2QIXFTcnQ==,iv:B8q+X6vElUyf5OMR66Le6T5pQY2uuUFI/6O48u1BOwk=,tag:GFjJWkAKOrEQtjE3OUVOhw==,type:str]
        external-dns.alpha.kubernetes.io/ttl: "300"
spec:
    type: ExternalName
    externalName: ENC[AES256_GCM,data:NbYRSrCxFUH02nHtQf/+/7EyO/H5MscSmvDCZMd+8lEaGh1f8A==,iv:dRXqEKRG6lltghsf8/6XDV6kkq+pU7Ytj0oJrRNv/mg=,tag:l6SzXbJFJRmx3NAu4oDrgw==,type:str]
    sessionAffinity: None
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSAvSTQvWjBscDlRT3h2M2lI
[...]
            ezGuaiY71dlw42VelU9dHKL3rSbBqKB385h0+IVg+KvhHZU18qFp0w==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-24T11:08:44Z"
    mac: ENC[AES256_GCM,data:RXSoy+4uP2JayekuykWr15nmeIPYaSzUlj7gJNea5i69leIg2H/MM1/+ZHuGRjsR3aqkXVjYNh+GTXjaZUAYPhy80oqURlWDRs8aDiS/C95Q6IbS8QYk6q2/bVJy5L9l6tVKS+5x5wYzNpcrcFnymbUwjWaWsucul3UAp+69u9Q=,iv:HuzE+sXzahAHjr+QGhq8BNfUEeNeUa1BeIBCau94QJQ=,tag:64Vdid9M5q6dJNhqf/6mVg==,type:str]
    pgp:
        - created_at: "2024-06-20T13:15:12Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVARAAh+MWVRxkkt+2fuW/nnJhfvfG6bt+aGqMNOU0FIunCOt4
[...]
            =Hnf9
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
