apps/monitoring/grafana/overlays/monitoring/resources/ingressroute.production.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-production
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:mHJXbP4TH2aWlfIoD8m6K8v1qRmmVlYPKjZ5Jv8=,iv:jRFG+s885k3Tede7uS+MNKwnzAarnLg2UC6gIKKjglQ=,tag:1UaGGdmw2FUrQ2npo2u2lw==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: grafana
    name: grafana
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:0KZHDyN+Imn8/CUc4Mj5edeT0USUqixkKuurzHoz5clFn2MAw9sWjnwtMmxW,iv:FFXApzFq4je9LIYYfJpEh0UdvAjc9J8G0XlEFNKoyQI=,tag:SjJ4UsUwWR72vtH8mZatPA==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: grafana
              port: 80
    tls:
        domains:
            - main: ENC[AES256_GCM,data:phe5b90UlY/rs5CU+dLB093oGsEOG7taWKM9sms=,iv:Pofqu6mGLvtL0jkY3LLDvxHmiYJHmN74DGN/8LLxV8c=,tag:aFUyueATTdsxkTDuor6R0w==,type:str]
              sans:
                - ENC[AES256_GCM,data:M4I4m2RE+MXVj142uQU/J5dyaUSxtWcqdtyuBx+z,iv:tU7tJCZMuPNpDZ1sOFI48eAdalbmRaei+EbyS0KTwAM=,tag:qlQrd6PbJA1A/6qjALRVAQ==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: route53-grafana-cf-production
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSByQjFVSDBuM3VvdzZtbWZQ
[...]
            Dj602MJB1MakaWTnNzMoaEKtH9ATDif7cQ8cSERPqklrsN+Vxjiapg==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-24T11:38:07Z"
    mac: ENC[AES256_GCM,data:6KvrKuLPXaxiW0RnPo0iylre6eCqiuE/j1bv9Lw9qWJlPIOto4lb+JEQX0bY6hgTX/lVPdhwJCiIhDOQr7PFz0XcTJNxccK2h3OhKwCHiwv4FtrZrjlxaYSTCyVoLxwm4rjli56xNX2xkHR8f4laRGOi2Oen3Vm+67hAGccrn5s=,iv:4yjZ583Iq5qCKuY61ReTi40Dr5rbeRbJGXNNsUyw3Wk=,tag:frLEz+8mZMvvUzbCUIhQgg==,type:str]
    pgp:
        - created_at: "2024-06-20T13:15:19Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ//cQMPtFSrqo9nLImp++VDQeVn2CtAHZ0kNrwCQs9Hhzbp
[...]
            =3d8p
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
