apps/monitoring/grafana/overlays/monitoring/resources/ingressroute.staging.sops.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    annotations:
        argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
        argocd.argoproj.io/compare-options: IgnoreExtraneous
        argocd.argoproj.io/sync-wave: "3"
        cert-manager.io/cluster-issuer: letsencrypt-staging
        external-dns.alpha.kubernetes.io/target: ENC[AES256_GCM,data:qSqFYmfpouGIrQT5OLUZyThsrjz60FytA8GeahA=,iv:GpJR5wegNL8irywMtMQ2bzyMP8SLGdRXrTitKuUnviQ=,tag:uFO/bdtHuGkQWeDfkQXuzA==,type:str]
        kubernetes.io/ingress.class: traefik-external
    labels:
        app.kubernetes.io/name: grafana
    name: grafana
    namespace: monitoring
spec:
    entryPoints:
        - websecure
    routes:
        - kind: Rule
          match: ENC[AES256_GCM,data:H+vvxZix9OUIqSekPtn//wBPksKe4Z5m7nLsMgo6wNhIbeSnGCIX5Cb+pRbZ,iv:MILSdGyMy/s5j2GNSqbyau6bGdB4M2TF7MDMgU0nvAE=,tag:XplheR7QfFOJptO8YuGSsQ==,type:str]
          middlewares:
            - name: chain-traefik-dashboard
              namespace: traefik
          services:
            - kind: TraefikService
              name: grafana
              port: 80
    tls:
        domains:
            - main: ENC[AES256_GCM,data:Z6Pgv8TjyuOXPoq61EVSfQGL2/w+ktfRtzQNDMQ=,iv:ffpXoFXL9IvPJiTRmMf2fW2Zp1qtjAf0RE7E5mdj5mk=,tag:WpHIsOxePTKkOOTxuplBfA==,type:str]
              sans:
                - ENC[AES256_GCM,data:/S408kGNxmpCjYJoZyY5RlbPvuNkEJW6D7kU04JM,iv:QDM22+63ibK2lLg9CFXtltbC2rUskGP+OLavKIPEa9o=,tag:Qakcz3wHebx4GL7kAm+7ow==,type:str]
        options:
            name: tls-ver13
            namespace: traefik
        secretName: grafana-cf-staging
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age:
        - recipient: age1deg9tqt7jtddnqme6nvcl72czns80z0n25u8k9pw5830dn4arsks5pua4h
          enc: |
            -----BEGIN AGE ENCRYPTED FILE-----
            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBUM1F5bmNMbGZiK2Z6dGFx
[...]
            M828eB9RVndy2zKS+F8iN+3YGs0579oiVrBzPVbcvwKOvP9UW5/bBA==
            -----END AGE ENCRYPTED FILE-----
    lastmodified: "2024-07-24T11:08:14Z"
    mac: ENC[AES256_GCM,data:iG06dsr9JVd7oYue0QiZ5tJF+jRCOSSWkBY0yQWQ33cusQcDUDfT9hUbE8l/mzj2e5o+lhgynb16ZguG3HZT4LM3OSJG+AM3b4igMFNLpRpWi2CfiCOLMfGHQM/6vmDJ5aAh0fvJ355YED3LtIFWyPreg/olpLAIHhSacnQrVHM=,iv:8W0xy43OaXOUGkL0nmNK0O/7nzuMQSqVlGMaxNSMIQU=,tag:3BNZtD429/wKDkDZsKcMCA==,type:str]
    pgp:
        - created_at: "2024-06-21T23:09:24Z"
          enc: |-
            -----BEGIN PGP MESSAGE-----

            hQIMA0R6oz1GmNjVAQ/+M0iTf+d860xzi1/nroqopf38pWJys8A4b1iXJLtdsiEb
[...]
            =kxLu
            -----END PGP MESSAGE-----
          fp: 6D3FE55384B558E06A1BA364586EFA784A32C981
    encrypted_regex: ^(externalName|external-dns.alpha.kubernetes.io/hostname|sans|main|match|external-dns.alpha.kubernetes.io/target|dnsNames|commonName|data|stringData|dnsNames|email|accessKeyID|region|hostedZoneID|role|dnsZones)$
    version: 3.8.1
